# ChangeLog for media-video/gcstar
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Oct 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-1.4.2.ebuild, +gcstar-1.4.3.ebuild:
  Version bump

  06 Sep 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -files/gcstar-1.4.0-desktop.patch, -gcstar-1.4.1.ebuild,
  +gcstar-1.4.2.ebuild:
  Version bump

  02 Sep 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
  Remove global use flags

  23 Aug 2008; Thomas Beierlein (TomJBE) <tb@forth-ev.de> metadata.xml:
  Added USE flag description wrt GLEP 56

  24 Jul 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-1.4.0.ebuild, +gcstar-1.4.1.ebuild:
  Version bump

  07 Jun 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-1.3.2.ebuild, -files/gcstar-1.3.2-man.patch, +gcstar-1.4.0.ebuild,
  +files/gcstar-1.4.0-desktop.patch, +files/gcstar-1.4.0-man.patch:
  Version bump

  31 Jan 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  gcstar-1.3.2.ebuild:
  Fix quoting to make repoman happy.

  31 Jan 2008; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  +files/gcstar-1.3.2-man.patch, -gcstar-1.3.1.ebuild, +gcstar-1.3.2.ebuild:
  Version bump.

  10 Dec 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com> ++,
  -gcstar-1.3.0.ebuild:
  Version bump.

  21 Nov 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  -gcstar-1.2.2.ebuild, +gcstar-1.3.0.ebuild:
  Version bump

  20 Sep 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  gcstar-1.2.2.ebuild:
  Fixed brokenness in previous commit

  19 Sep 2007; <cla@gentoo.org> gcstar-1.2.2.ebuild:
  Fixed coding standards, removed useless inherit eclass

  17 Sep 2007; Alexandre Rostovtsev (tetromino) <tetromino@gmail.com>
  metadata.xml, -gcstar-1.2.1.ebuild, +gcstar-1.2.2.ebuild:
  Version bump and add LINGUAS support
