@@ -1,5 +1,5 @@
 AUX gcstar-1.4.0-man.patch 851 RMD160 3149a94aff6bc8ad4e69c72279d66b58050444bd SHA1 132a910bbf4e259118d09cf0391bb6dfdb7c29ea SHA256 5d0d98ce137e95e1b3430c65bebaed384058e47b5fca8c9ad1c7515d84f6fb66
 DIST gcstar-1.4.3.tar.gz 2505623 RMD160 ef48c03e5118b417db81fc856da0b2f91735d09b SHA1 9ff69f5dff4f20cce44bbb27b15e93f2f4f18e08 SHA256 1d0e079fc5c1bae9f5f5590ba07bff005136fe0a53876c55022689e5e14e4629
-EBUILD gcstar-1.4.3.ebuild 2085 RMD160 40d4768ff71a46d4b5723d2a8116a440e3caac89 SHA1 638d7ce795ee1820b45485470748b5f8d44532c3 SHA256 bf426a68b5be3430fbe6922e53d2f80288815fee6d7cb6ecc35dc583af089d7a
-MISC ChangeLog 3001 RMD160 49f94d21d3522e5c1594b6e329340d247fd33a87 SHA1 1c7a570b6944ef23a2bcf0112bc26d1e5a786b0c SHA256 90e96a636ad782dac5825ad406cc44637181ebea9dfcf95e0343b09542054321
+EBUILD gcstar-1.4.3.ebuild 2025 RMD160 ffd379dbc9425de1a1e97c1393b63ac9930354c8 SHA1 1081f3987ce776850c781307876ae682c061f81a SHA256 fea395b673b1fcdc3c4abdc6ff2891696055893827bfa6d66254a76aa454a8ef
+MISC ChangeLog 3117 RMD160 3d413f89be7b31fba565ff33c44d62d4621b7376 SHA1 cc2edb564a5758a04a2654537d743f4399967b0f SHA256 a022c7fa1fe66f5a4acd62af396b53d00558b0b88d46ee1218f19a4884331e33
 MISC metadata.xml 630 RMD160 76dd3eaf6f0ddf9a2b1d0f8cf8b2a79d045b7066 SHA1 73776c9aa7a729a69000845249ec7a27b2fb1a0b SHA256 12ec4ce6382c7ecf07344bd2e56d714dd7319f22af8b24346314af275583e176
